--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.sql.init.mode=always
+spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:13306/ssia-ch14-ex1
+# The fix
+#spring.datasource.url=jdbc:mysql://localhost:13306/ssia-ch14-ex1?preserveInstants=true&connectionTimeZone=UTC&forceConnectionTimeZoneToSession=true
